I updated file pathing so that my links work. I also converted the csumb logo to a jpg but I may convert it back to a png later

--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -11,9 +11,9 @@
     </div>
     <hr>
     <div>
-    <a href="Lab1.html"> Home </a>
-    <a href="pages/about.html"> About </a>
-    <a href="pages/contact.html"> Contact </a>
+    <a href="../index.html"> Home </a>
+    <a href="about.html"> About </a>
+    <a href="contact.html"> Contact </a>
     <br>
     <br>
     </div>
@@ -58,7 +58,7 @@
     <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
     It is used for academic purposes.<br>
 </p>
-<img src="/img/csumb.png" alt="CSUMB Logo">
+<img src="../img/csumb.jpg" width = 15% alt="CSUMB Logo">
 </div>
 </body>
 </html>
