--- a/lab1/index.html
+++ b/lab1/index.html
@@ -9,29 +9,29 @@
     <h1>Team 19</h1>
     <hr>
     <div>
-    <a href="Lab1.html"> Home </a>
+    <a href="index.html"> Home </a>
     <a href="pages/about.html"> About </a>
     <a href="pages/contact.html"> Contact </a>
     <br>
     </div>
     
     <div>
-    <img src="img/Carlos.jpg" width = 300px alt="Carlos Solian">
+    <img src="img/Carlos.jpg" width = 25% alt="Carlos Solian">
     <p>Carlos</p>
     </div>
 
     <div>
-    <img src="img/Gideon.jpg" width = 300px alt="Gideon Stewman">
+    <img src="img/Gideon.jpg" width = 25% alt="Gideon Stewman">
     <p>Gideon</p>
     </div>
 
     <div>
-    <img src="img/Paul.jpeg" width = 300px alt="Paul Traissac">
+    <img src="img/Paul.jpeg" width = 25% alt="Paul Traissac">
     <p>Paul</p>
     </div>
 
     <div>
-    <img src="img/Sarah.jpeg" width = 300px alt="Sarah Wafa">
+    <img src="img/Sarah.jpeg" width = 25% alt="Sarah Wafa">
     <p>Sarah</p>
     </div>
 
@@ -49,7 +49,7 @@
     <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
     It is used for academic purposes.<br>
 </p>
-<img src="/img/csumb.png" alt="CSUMB Logo">
+<img src="./img/csumb.jpg" width = 15% alt="CSUMB Logo">
 </div>
 
 </body>
