--- a/lab1/pages/contact.html
+++ b/lab1/pages/contact.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div>
-    <a href="Lab1.html"> Home </a>
-    <a href="pages/about.html"> About </a>
-    <a href="pages/contact.html"> Contact </a>
+    <a href="../index.html"> Home </a>
+    <a href="about.html"> About </a>
+    <a href="contact.html"> Contact </a>
     <br>
     </div>
 
@@ -20,7 +20,7 @@
     <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
     It is used for academic purposes.<br>
 </p>
-<img src="/img/csumb.png" alt="CSUMB Logo">
+<img src="../img/csumb.jpg" width = 15%alt="CSUMB Logo">
 </div>
 </body>
 </html>
