--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lab 1</title>
+    <!-- Connecting CSS File -->
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Team 19</h1>
     <hr>
     <div>
-    <a href="index.html"> Home </a>
-    <a href="pages/about.html"> About </a>
-    <a href="pages/contact.html"> Contact </a>
-    <br>
+        <a href="index.html"> Home </a>
+        <a href="pages/about.html"> About </a>
+        <a href="pages/contact.html"> Contact </a>
+        <br>
     </div>
-    
-    <div>
-    <img src="img/Carlos.jpg" width = 25% alt="Carlos Solian">
-    <p>Carlos</p>
+    <!-- Need an id because its only one element in whole webpage -->
+    <div id="teamFlexBox">
+        
+        <figure class="teamFigure">
+            <img class="teamImg" src="img/Carlos.jpg" alt="Carlos Solian">
+            <figcaption>Carlos</figcaption>
+        </figure>
+
+        <figure class="teamFigure">
+            <img class="teamImg" src="img/Gideon.jpg" alt="Gideon Stewman">
+            <figcaption>Gideon</figcaption>
+        </figure>
+
+        <figure class="teamFigure">
+            <img class="teamImg" src="img/Paul.jpeg" alt="Paul Traissac">
+            <figcaption>Paul</figcaption>
+        </figure>
+
+        <figure class="teamFigure">
+            <img class="teamImg" src="img/Sarah.jpeg" alt="Sarah Wafa">
+            <figcaption>Sarah</figcaption>
+        </figure>
+
     </div>
 
-    <div>
-    <img src="img/Gideon.jpg" width = 25% alt="Gideon Stewman">
-    <p>Gideon</p>
-    </div>
 
     <div>
-    <img src="img/Paul.jpeg" width = 25% alt="Paul Traissac">
-    <p>Paul</p>
-    </div>
-
-    <div>
-    <img src="img/Sarah.jpeg" width = 25% alt="Sarah Wafa">
-    <p>Sarah</p>
-    </div>
-
-
-    <div>
-    <p>Hello thank you for visiting our page. We are computer science majors at California State Monterey Bay.</p>
-    <p><em>"The more you know, the more you realize you don't know"</em><br> - Aristotle</p>
+        <p>Hello thank you for visiting our page. We are computer science majors at California State Monterey Bay.</p>
+        <p><em>"The more you know, the more you realize you don't know"</em><br> - Aristotle</p>
     </div>
 
     <hr>
 
-<div>
-<p>
-    CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-    <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-    It is used for academic purposes.<br>
-</p>
-<img src="./img/csumb.jpg" width = 15% alt="CSUMB Logo">
-</div>
+    <div>
+        <p>
+            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+            It is used for academic purposes.<br>
+        </p>
+        <img src="./img/csumb.jpg" width=15% alt="CSUMB Logo">
+    </div>
 
 </body>
+
 </html>
