first additions of css

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -9,36 +9,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <h1>Team 19</h1>
+<body id="background">
+    <h1 class="pageTitle">Team 19</h1>
     <hr>
-    <div>
+    <div class="pageLinks">
         <a href="index.html"> Home </a>
         <a href="pages/about.html"> About </a>
         <a href="pages/contact.html"> Contact </a>
-        <br>
     </div>
     <!-- Need an id because its only one element in whole webpage -->
     <div id="teamFlexBox">
         
         <figure class="teamFigure">
             <img class="teamImg" src="img/Carlos.jpg" alt="Carlos Solian">
-            <figcaption>Carlos</figcaption>
+            <figcaption class="centerCaptions">Carlos</figcaption>
         </figure>
 
         <figure class="teamFigure">
             <img class="teamImg" src="img/Gideon.jpg" alt="Gideon Stewman">
-            <figcaption>Gideon</figcaption>
+            <figcaption class="centerCaptions">Gideon</figcaption>
         </figure>
 
         <figure class="teamFigure">
             <img class="teamImg" src="img/Paul.jpeg" alt="Paul Traissac">
-            <figcaption>Paul</figcaption>
+            <figcaption class="centerCaptions">Paul</figcaption>
         </figure>
 
         <figure class="teamFigure">
             <img class="teamImg" src="img/Sarah.jpeg" alt="Sarah Wafa">
-            <figcaption>Sarah</figcaption>
+            <figcaption class="centerCaptions">Sarah</figcaption>
         </figure>
 
     </div>
@@ -57,7 +56,7 @@
             <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
             It is used for academic purposes.<br>
         </p>
-        <img src="./img/csumb.jpg" width=15% alt="CSUMB Logo">
+        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
     </div>
 
 </body>
