--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Team 19</title>
+    <!-- Connecting CSS File -->
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+
+<body id="background">
     <div>
-    <h1>Team 19</h1>
+        <h1>Team 19</h1>
     </div>
     <hr>
-    <div>
-    <a href="../index.html"> Home </a>
-    <a href="about.html"> About </a>
-    <a href="contact.html"> Contact </a>
-    <br>
-    <br>
+    <div class="pageLinks">
+        <a href="../index.html"> Home </a>
+        <a href="about.html"> About </a>
+        <a href="contact.html"> Contact </a>
     </div>
 
     <div>
@@ -44,21 +46,25 @@
     <div>
         <h4>Our Common Hobbies: </h4>
         <ul>
-            <li>Programming: As Computer Science students naturally we spend a lot of time programming in school, yet we still engage in a lot of programming on our own, typically various side projects.</li>
-            <li>Video Games: We all enjoy Video Games during some of our free time, including games like Farming Simulator, Overwatch, and Disco Elysium</li>
-            <li>Anime: We also like watching anime from time to time, including anime like Frieren and Jujutsu Kaisen</li>
+            <li>Programming: As Computer Science students naturally we spend a lot of time programming in school, yet we
+                still engage in a lot of programming on our own, typically various side projects.</li>
+            <li>Video Games: We all enjoy Video Games during some of our free time, including games like Farming
+                Simulator, Overwatch, and Disco Elysium</li>
+            <li>Anime: We also like watching anime from time to time, including anime like Frieren and Jujutsu Kaisen
+            </li>
         </ul>
     </div>
 
     <hr>
 
     <div>
-<p>
-    CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-    <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-    It is used for academic purposes.<br>
-</p>
-<img src="../img/csumb.jpg" width = 15% alt="CSUMB Logo">
-</div>
+        <p>
+            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+            It is used for academic purposes.<br>
+        </p>
+        <img src="../img/csumb.jpg" width=15% alt="CSUMB Logo">
+    </div>
 </body>
+
 </html>
