--- a/lab1/pages/contact.html
+++ b/lab1/pages/contact.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Connecting CSS File -->
+    <link rel="stylesheet" href="../styles.css">
 </head>
+
 <body>
-    <div>
-    <a href="../index.html"> Home </a>
-    <a href="about.html"> About </a>
-    <a href="contact.html"> Contact </a>
-    <br>
+    <h1 class="pageTitle">Contact Page</h1>
+    <div class="pageLinks">
+        <a href="../index.html"> Home </a>
+        <a href="about.html"> About </a>
+        <a href="contact.html"> Contact </a>
+        <br>
     </div>
 
+    <div id="centerForm">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbD60iHlyEzW-gBRHDySvhn4de79mW1PQGZr0zCD4Ydfn5yA/viewform?embedded=true" width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+
+
     <div>
-<p>
-    <hr>
-    CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-    <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-    It is used for academic purposes.<br>
-</p>
-<img src="../img/csumb.jpg" width = 15%alt="CSUMB Logo">
-</div>
+        <p>
+            <hr>
+            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+            It is used for academic purposes.<br>
+        </p>
+        <img src="../img/csumb.jpg" width=15%alt="CSUMB Logo">
+    </div>
 </body>
+
 </html>
