added all .css to all of my files

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body id="background">
-    <h1 class="pageTitle">Team 19</h1>
+    <div class="pageTitleDiv">
+    <h1 class="pageTitle">Team 19: Home Page</h1>
+    </div>
     <hr>
     <div class="pageLinks">
         <a href="index.html"> Home </a>
@@ -43,14 +45,14 @@
     </div>
 
 
-    <div>
+    <div class="thankYouMessage">
         <p>Hello thank you for visiting our page. We are computer science majors at California State Monterey Bay.</p>
-        <p><em>"The more you know, the more you realize you don't know"</em><br> - Aristotle</p>
+        <p class="italic">"The more you know, the more you realize you don't know"<br> - Aristotle</p>
     </div>
 
     <hr>
 
-    <div>
+    <div class="disclaimer">
         <p>
             CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
             <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
