--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -10,20 +10,20 @@
 </head>
 
 <body id="background">
-    <div>
-        <h1>Team 19</h1>
+    <div class="pageTitleDiv">
+        <h1 class="pageTitle">Team 19: About Page</h1>
     </div>
     <hr>
     <div class="pageLinks">
         <a href="../index.html"> Home </a>
-        <a href="about.html"> About </a>
+        <!-- <a href="about.html"> About </a> -->
         <a href="contact.html"> Contact </a>
     </div>
 
-    <div>
-        <table>
+    <div class="programTableDiv">
+        <table class="programTable">
             <tr>
-                <th>Programming Language</th>
+                <th>Programming Languages</th>
                 <th>Years Experience</th>
             </tr>
             <tr>
@@ -41,11 +41,9 @@
         </table>
     </div>
 
-    <br>
-
-    <div>
-        <h4>Our Common Hobbies: </h4>
-        <ul>
+    <div class="commonHobbiesDiv">
+        <h4 class="hWithoutPadding">Our Common Hobbies: </h4>
+        <ul class="ulWithoutPadding">
             <li>Programming: As Computer Science students naturally we spend a lot of time programming in school, yet we
                 still engage in a lot of programming on our own, typically various side projects.</li>
             <li>Video Games: We all enjoy Video Games during some of our free time, including games like Farming
@@ -57,13 +55,13 @@
 
     <hr>
 
-    <div>
+    <div class="disclaimer">
         <p>
             CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
             <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
             It is used for academic purposes.<br>
         </p>
-        <img src="../img/csumb.jpg" width=15% alt="CSUMB Logo">
+        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
     </div>
 </body>
 
