--- a/lab1/pages/contact.html
+++ b/lab1/pages/contact.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 
-<body>
-    <h1 class="pageTitle">Contact Page</h1>
+<body id="background">
+    <div class="pageTitleDiv">
+    <h1 class="pageTitle">Team 19: Contact Page</h1>
+    </div>
+    <hr>
     <div class="pageLinks">
         <a href="../index.html"> Home </a>
         <a href="about.html"> About </a>
-        <a href="contact.html"> Contact </a>
+        <!-- <a href="contact.html"> Contact </a> -->
         <br>
     </div>
 
@@ -23,14 +26,14 @@
     </div>
 
 
-    <div>
+    <div class="disclaimer">
         <p>
             <hr>
             CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
             <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
             It is used for academic purposes.<br>
         </p>
-        <img src="../img/csumb.jpg" width=15%alt="CSUMB Logo">
+        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
     </div>
 </body>
 
