Added final touches of css and reformated pages

--- a/lab1/pages/about.html
+++ b/lab1/pages/about.html
@@ -16,7 +16,9 @@
     <hr>
     <div class="pageLinks">
         <a href="../index.html"> Home </a>
-        <!-- <a href="about.html"> About </a> -->
+        <div class="activePage">
+            <a href="about.html"> About </a>
+        </div>
         <a href="contact.html"> Contact </a>
     </div>
 
@@ -54,14 +56,15 @@
     </div>
 
     <hr>
-
-    <div class="disclaimer">
-        <p>
-            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-            It is used for academic purposes.<br>
-        </p>
-        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+    <div id="footer">
+        <div class="disclaimer">
+            <p>
+                CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+                <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+                It is used for academic purposes.<br>
+            </p>
+            <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+        </div>
     </div>
 </body>
 
