--- a/lab1/pages/contact.html
+++ b/lab1/pages/contact.html
@@ -11,29 +11,37 @@
 
 <body id="background">
     <div class="pageTitleDiv">
-    <h1 class="pageTitle">Team 19: Contact Page</h1>
+        <h1 class="pageTitle">Team 19: Contact Page</h1>
     </div>
     <hr>
     <div class="pageLinks">
         <a href="../index.html"> Home </a>
         <a href="about.html"> About </a>
-        <!-- <a href="contact.html"> Contact </a> -->
-        <br>
+        <div class="activePage">
+            <a href="contact.html"> Contact </a>
+        </div>
+
     </div>
 
     <div id="centerForm">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdbD60iHlyEzW-gBRHDySvhn4de79mW1PQGZr0zCD4Ydfn5yA/viewform?embedded=true" width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSdbD60iHlyEzW-gBRHDySvhn4de79mW1PQGZr0zCD4Ydfn5yA/viewform?embedded=true"
+            width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <hr>
     </div>
 
+    <div id="footer">
 
-    <div class="disclaimer">
-        <p>
-            <hr>
-            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-            It is used for academic purposes.<br>
-        </p>
-        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+        <div class="disclaimer">
+            <p>
+
+                CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+                <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+                It is used for academic purposes.<br>
+            </p>
+            <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+        </div>
+
     </div>
 </body>
 
