--- a/lab1/index.html
+++ b/lab1/index.html
@@ -11,17 +11,18 @@
 
 <body id="background">
     <div class="pageTitleDiv">
-    <h1 class="pageTitle">Team 19: Home Page</h1>
+        <h1 class="pageTitle">Team 19: Home Page</h1>
     </div>
     <hr>
     <div class="pageLinks">
-        <a href="index.html"> Home </a>
+        <div class="activePage">
+            <a href="index.html"> Home </a>
+        </div>
         <a href="pages/about.html"> About </a>
         <a href="pages/contact.html"> Contact </a>
     </div>
     <!-- Need an id because its only one element in whole webpage -->
     <div id="teamFlexBox">
-        
         <figure class="teamFigure">
             <img class="teamImg" src="img/Carlos.jpg" alt="Carlos Solian">
             <figcaption class="centerCaptions">Carlos</figcaption>
@@ -51,16 +52,16 @@
     </div>
 
     <hr>
-
-    <div class="disclaimer">
-        <p>
-            CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
-            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-            It is used for academic purposes.<br>
-        </p>
-        <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+    <div id="footer">
+        <div class="disclaimer">
+            <p>
+                CST336 Internet Programming. 2026© Solian, Stewman, Traissac, Wafa<br>
+                <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+                It is used for academic purposes.<br>
+            </p>
+            <img id="csumb_logo" src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+        </div>
     </div>
-
 </body>
 
 </html>
