Start of the home page (still missing footer)

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>General Data Science</title>
 </head>
-<body>
-    
+
+<body id="backGroundColor">
+
+    <!-- HEADER -->
+    <div id="titleDiv">
+
+        <h1 id="titleText">Data Science</h1>
+
+        <div class="linkDiv">
+            <a class="linkText" href="./index.html"> Home </a>
+        </div>
+
+    </div>
+
+    <!-- OVER VIEW TEXT AND IMAGE -->
+    <div class="overViewDiv">
+
+        <div class="textImgAlignment">
+
+            <div class="pText">
+                <h2 class="overViewHeader">Overview</h2>
+
+                <p>
+                    Data science is a field that uses statistics, mathematics, and computer science to better evaluate
+                    data. It is a way to teach computers how to read, analyze, and manipulate data in a way that is
+                    efficient. It also
+                    helps the user futher explain data to others who may no understand the large amounts of data that
+                    they are
+                    looking at.
+                </p>
+                <p>Source: <a href="https://www.ibm.com/think/topics/data-science">https://www.ibm.com/think/topics/data-science</a></p>
+            </div>
+
+            <div class="imgClass">
+                <img src="img/business.jpeg" alt="Businesswoman in glasses standing near display with data analysis">
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- FOOTER -->
+
+
 </body>
+
 </html>
