--- a/hw1/index.html
+++ b/hw1/index.html
@@ -53,7 +53,9 @@
      <!-- [Page_1] [Page_2] [Page_3] -->
 
      <div class="flexBox">
-
+        <div>
+            
+        </div>
      </div>
 
     <!-- FOOTER -->
