--- a/hw1/index.html
+++ b/hw1/index.html
@@ -39,7 +39,9 @@
                     they are
                     looking at.
                 </p>
-                <p>Source: <a href="https://www.ibm.com/think/topics/data-science">https://www.ibm.com/think/topics/data-science</a></p>
+                <p>Source: <a
+                        href="https://www.ibm.com/think/topics/data-science">ibm</a>
+                </p>
             </div>
 
             <div class="imgClass">
@@ -50,17 +52,45 @@
 
     </div>
     <!-- I want to add my 3 pages here -->
-     <!-- [Page_1] [Page_2] [Page_3] -->
+    <!-- [Page_1] [Page_2] [Page_3] -->
 
-     <div class="flexBox">
-        <div>
-            
+    <div class="bannerBox">
+
+
+        <div class="bannerImgDiv">
+            <h3 class="bannerText">Machine Learning</h3>
+            <img class="bannerImg" src="img/ml.jpeg" alt="Machine Learning">
+            <p>Machine learning is a way of developing alogirthms that computers can then learn from without having explicty tell it the answer.</p>
+            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/machine-learning/machine-learning/" target="_blank">geeksforgeeks</a></p>
         </div>
-     </div>
 
-    <!-- FOOTER -->
+        <div class="bannerImgDiv">
+            <h3 class="bannerText">Artificial Intelligence</h3>
+            <img class="bannerImg" src="img/ai.jpeg" alt="Artificial Intelligence">
+            <p>Artificial Intelligence or AI is similar to machine learning but instead of predicitng data it can simulate the ways human think or act.</p>
+            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/artificial-intelligence/artificial-intelligence/" target="_blank">geeksforgeeks</a></p>
+        </div>
+
+        <div class="bannerImgDiv">
+            <h3 class="bannerText">Data Analytics</h3>
+            <img class="bannerImg" src="img/data.jpeg" alt="Data Analytics">
+            <p>Data Analytics is the process of looking at, cleaning, changing, and understanding large amounts of data.</p>
+            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/data-analysis/data-analysis-tutorial/" target="_blank">geeksforgeeks</a></p>
+        </div>
 
 
+
+    </div>
+
+    <footer id="footCSS">
+        <p>
+            CST336 Internet Programming. 2026© Solian<br>
+            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+            It is used for academic purposes.<br>
+        </p>
+
+        <img src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+    </footer>
 </body>
 
 </html>
