Quick fix on links

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -40,7 +40,7 @@
                     looking at.
                 </p>
                 <p>Source: <a
-                        href="https://www.ibm.com/think/topics/data-science">ibm</a>
+                        class = "bannerImgLinks" href="https://www.ibm.com/think/topics/data-science">ibm</a>
                 </p>
             </div>
 
