Adding formating to additional 3 pages

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -16,9 +16,12 @@
         <h1 id="titleText">Data Science</h1>
 
         <div class="linkDiv">
-            <a class="linkText" href="./index.html"> Home </a>
-            <a class="linkText" href="pages/ai.html">AI: Artificial Intelligence</a>
+            <div id="activeLink">
+                <a class="linkText" href="./index.html"> Home </a>
+            </div>
             <a class="linkText" href="pages/machineLearning.html">ML: Machine Learning</a>
+            <a class="linkText" href="pages/ai.html">AI: Artificial Intelligence</a>
+            <a class="linkText" href="pages/dataAnalytics.html">Data Analytics</a>
         </div>
 
     </div>
@@ -39,8 +42,7 @@
                     they are
                     looking at.
                 </p>
-                <p>Source: <a
-                        class = "bannerImgLinks" href="https://www.ibm.com/think/topics/data-science">ibm</a>
+                <p>Source: <a class="bannerImgLinks" href="https://www.ibm.com/think/topics/data-science">ibm</a>
                 </p>
             </div>
 
@@ -60,22 +62,30 @@
         <div class="bannerImgDiv">
             <h3 class="bannerText">Machine Learning</h3>
             <img class="bannerImg" src="img/ml.jpeg" alt="Machine Learning">
-            <p>Machine learning is a way of developing alogirthms that computers can then learn from without having explicty tell it the answer.</p>
-            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/machine-learning/machine-learning/" target="_blank">geeksforgeeks</a></p>
+            <p>Machine learning is a way of developing alogirthms that computers can then learn from without having
+                explicty tell it the answer.</p>
+            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/machine-learning/machine-learning/"
+                    target="_blank">geeksforgeeks</a></p>
         </div>
 
         <div class="bannerImgDiv">
             <h3 class="bannerText">Artificial Intelligence</h3>
             <img class="bannerImg" src="img/ai.jpeg" alt="Artificial Intelligence">
-            <p>Artificial Intelligence or AI is similar to machine learning but instead of predicitng data it can simulate the ways human think or act.</p>
-            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/artificial-intelligence/artificial-intelligence/" target="_blank">geeksforgeeks</a></p>
+            <p>Artificial Intelligence or AI is similar to machine learning but instead of predicitng data it can
+                simulate the ways human think or act.</p>
+            <p>Source: <a class="bannerImgLinks"
+                    href="https://www.geeksforgeeks.org/artificial-intelligence/artificial-intelligence/"
+                    target="_blank">geeksforgeeks</a></p>
         </div>
 
         <div class="bannerImgDiv">
             <h3 class="bannerText">Data Analytics</h3>
             <img class="bannerImg" src="img/data.jpeg" alt="Data Analytics">
-            <p>Data Analytics is the process of looking at, cleaning, changing, and understanding large amounts of data.</p>
-            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/data-analysis/data-analysis-tutorial/" target="_blank">geeksforgeeks</a></p>
+            <p>Data Analytics is the process of looking at, cleaning, changing, and understanding large amounts of data.
+            </p>
+            <p>Source: <a class="bannerImgLinks"
+                    href="https://www.geeksforgeeks.org/data-analysis/data-analysis-tutorial/"
+                    target="_blank">geeksforgeeks</a></p>
         </div>
 
 
