--- a/hw1/pages/dataAnalytics.html
+++ b/hw1/pages/dataAnalytics.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Data Analytics Page</title>
 </head>
+
 <body id="backGroundColor">
-    
+    <!-- HEADER -->
+    <div id="titleDiv">
+
+        <h1 id="titleText">Data Analytics</h1>
+
+        <div class="linkDiv">
+            <a class="linkText" href="../index.html"> Home </a>
+            <a class="linkText" href="../pages/machineLearning.html">ML: Machine Learning</a>
+            <a class="linkText" href="../pages/ai.html">AI: Artificial Intelligence</a>
+            <div id="activeLink">
+                <a class="linkText" href="../pages/dataAnalytics.html">Data Analytics</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- Footer -->
+    <footer id="footCSS">
+        <p>
+            CST336 Internet Programming. 2026© Solian<br>
+            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+            It is used for academic purposes.<br>
+        </p>
+
+        <img src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+    </footer>
 </body>
+
 </html>
