Finishing all pages, checking with spell check and adding

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -35,12 +35,7 @@
                 <h2 class="overViewHeader">Overview</h2>
 
                 <p>
-                    Data science is a field that uses statistics, mathematics, and computer science to better evaluate
-                    data. It is a way to teach computers how to read, analyze, and manipulate data in a way that is
-                    efficient. It also
-                    helps the user futher explain data to others who may no understand the large amounts of data that
-                    they are
-                    looking at.
+                    Data science is a field that uses statistics, mathematics, and computer science to better evaluate data. It is a way to teach computers how to read, analyze, and manipulate data in a way that is efficient. It also helps the user further explain data to others who may not understand the large amounts of data that they are looking at.
                 </p>
                 <p>Source: <a class="bannerImgLinks" href="https://www.ibm.com/think/topics/data-science">ibm</a>
                 </p>
@@ -62,8 +57,8 @@
         <div class="bannerImgDiv">
             <h3 class="bannerText">Machine Learning</h3>
             <img class="bannerImg" src="img/ml.jpeg" alt="Machine Learning">
-            <p>Machine learning is a way of developing alogirthms that computers can then learn from without having
-                explicty tell it the answer.</p>
+            <p>Machine learning is a way of developing algorithms that computers can then learn from without having
+                explicitly tell it the answer.</p>
             <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/machine-learning/machine-learning/"
                     target="_blank">geeksforgeeks</a></p>
         </div>
@@ -71,8 +66,8 @@
         <div class="bannerImgDiv">
             <h3 class="bannerText">Artificial Intelligence</h3>
             <img class="bannerImg" src="img/ai.jpeg" alt="Artificial Intelligence">
-            <p>Artificial Intelligence or AI is similar to machine learning but instead of predicitng data it can
-                simulate the ways human think or act.</p>
+            <p>Artificial Intelligence or AI is similar to machine learning but instead of predicting data it simulate
+                the ways human think or act.</p>
             <p>Source: <a class="bannerImgLinks"
                     href="https://www.geeksforgeeks.org/artificial-intelligence/artificial-intelligence/"
                     target="_blank">geeksforgeeks</a></p>
@@ -81,8 +76,7 @@
         <div class="bannerImgDiv">
             <h3 class="bannerText">Data Analytics</h3>
             <img class="bannerImg" src="img/data.jpeg" alt="Data Analytics">
-            <p>Data Analytics is the process of looking at, cleaning, changing, and understanding large amounts of data.
-            </p>
+            <p>Data Analytics is the process of looking at, cleaning, changing, and understanding large amounts of data.</p>
             <p>Source: <a class="bannerImgLinks"
                     href="https://www.geeksforgeeks.org/data-analysis/data-analysis-tutorial/"
                     target="_blank">geeksforgeeks</a></p>
