--- a/hw1/pages/ai.html
+++ b/hw1/pages/ai.html
@@ -25,18 +25,25 @@
         </div>
 
     </div>
+    <div class="videoDiv">
+        <div class="videoDivParTexDIV">
+            <p class="videoDivParText">Artificial Intelligence is a simulation of human intelligence. It is a combination of data analytics and machine learning. Current AI’s are ChatGPT, Gemini, and Grok. With these types of AI, we learn from every conversation. An AI agent is really just a software that performs as if it has real thought. </p>
+            <p>Source: <a class="bannerImgLinks"
+                    href="https://www.geeksforgeeks.org/artificial-intelligence/artificial-intelligence/"
+                    target="_blank">geeksforgeeks</a></p>
+        </div>
+        <img src="../img/dataAIPage.jpeg" alt="Hovering AI image on top of a computer">
+</div>
+        <!-- Footer -->
+        <footer id="footCSS">
+            <p>
+                CST336 Internet Programming. 2026© Solian<br>
+                <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
+                It is used for academic purposes.<br>
+            </p>
 
-
-    <!-- Footer -->
-    <footer id="footCSS">
-        <p>
-            CST336 Internet Programming. 2026© Solian<br>
-            <strong>Disclaimer: </strong> The information in this webpage is fictious.<br>
-            It is used for academic purposes.<br>
-        </p>
-
-        <img src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
-    </footer>
+            <img src="https://csumb.space/cst/336/img/csumb_logo.png" alt="CSUMB Logo">
+        </footer>
 </body>
 
 </html>
