--- a/hw1/pages/dataAnalytics.html
+++ b/hw1/pages/dataAnalytics.html
@@ -24,6 +24,19 @@
         </div>
 
     </div>
+
+    <div class="videoDiv">
+        <div class="videoDivParTexDIV">
+            <p class="videoDivParText">Data analytics is the way a computer can look at, sort and interpret data to find important information or draw conclusions. The ultimate goal is to understand data. It turns raw unsorted data to something that not only a computer can interpret but also that a person can visualize better. </p>
+            <p>Source: <a class="bannerImgLinks"
+                    href="https://www.geeksforgeeks.org/data-analysis/data-analysis-tutorial/"
+                    target="_blank">geeksforgeeks</a></p>
+            <!-- NEW HTML TAG -->
+            <button class="openButton">Open</button>
+        </div>
+        <img src="../img/dataAPage.jpeg" alt="Hand holding analytic tools">
+    </div>
+    
     <!-- Footer -->
     <footer id="footCSS">
         <p>
