--- a/hw1/pages/machineLearning.html
+++ b/hw1/pages/machineLearning.html
@@ -28,17 +28,14 @@
 
 
     <div class="videoDiv">
+        <div class="videoDivParTexDIV">
+            <p class="videoDivParText">Machine learning is separated into 3 types. Supervised learning which trains models on data that is already labeled so that the program can predict new data. Unsupervised learning which finds patterns in unlabeled data. The last learning style is reinforcement learning which learns through trial and error. The goal of machine learning is to allow systems to learn from the data to make a decision or prediction. </p>
+            <p>Source: <a class="bannerImgLinks" href="https://www.geeksforgeeks.org/machine-learning/machine-learning"
+                    target="_blank">geeksforgeeks</a></p>
+        </div>
         <!-- NEW HTML TAG -->
         <video autoplay muted controls loop src="../videos/Machine Learning.mp4"></video>
     </div>
-
-    <div>
-
-    </div>
-
-
-
-
 
     <footer id="footCSS">
         <p>
