Fixing the error on the machine learning page

--- a/hw1/pages/machineLearning.html
+++ b/hw1/pages/machineLearning.html
@@ -34,7 +34,7 @@
                     target="_blank">geeksforgeeks</a></p>
         </div>
         <!-- NEW HTML TAG -->
-        <video autoplay muted controls loop src="../videos/Machine Learning.mp4"></video>
+        <video autoplay muted controls loop src="../videos/Machine_Learning.mp4"></video>
     </div>
 
     <footer id="footCSS">
