--- a/lab2/partner/index.html
+++ b/lab2/partner/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lab 2: Guess Number
+    </title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
