--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,20 +6,21 @@
     Last Name: <input type="text"><br>
     Email: <input type="text"><br>
     Phone Number:<input type="text"><br><br>
-    Zip Code: <input type="text"><br>
-    City:
+    Zip Code: <input id ="zipCode-input"type="text"><br>
+    City: <span id="city-display"></span>
     <br>
-    Latitude:
+    Latitude: <span id="latitude-display"></span>
     <br>
-    Longitude:
+    Longitude: <span id="longitude-display"></span>
     <br><br>
     State: <select></select><br>
     Select a County: <select></select><br>
 
-    Desired Username: <input type="text"><br>
-    Password: <input type="password"><br>
+    Desired Username: <input id="username-input"type="text"> <span id="username-valid"></span><br>
+    Password: <input id="password-input" type="password"> <span id="password-suggestion"></span> <br>
     Type Password Again: <input type="password"><br>
     <input type="submit" value="Sign up!">
+    <span id="err-msg"></span>
 </fieldset>
 
 <script src="js/index-script.js" defer></script>
