--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,26 +1,40 @@
-<h1> Sign Up Form </h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<fieldset>
-    <legend>Sign Up</legend>
-    First Name: <input type="text"><br>
-    Last Name: <input type="text"><br>
-    Email: <input type="text"><br>
-    Phone Number:<input type="text"><br><br>
-    Zip Code: <input id ="zipCode-input"type="text"><br>
-    City: <span id="city-display"></span>
-    <br>
-    Latitude: <span id="latitude-display"></span>
-    <br>
-    Longitude: <span id="longitude-display"></span>
-    <br><br>
-    State: <select></select><br>
-    Select a County: <select></select><br>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 4: Sign up page</title>
+    <script src="js/index-script.js" defer></script>
+    <link rel="stylesheet" href="styles/indext-style.css">
+</head>
 
-    Desired Username: <input id="username-input"type="text"> <span id="username-valid"></span><br>
-    Password: <input id="password-input" type="password"> <span id="password-suggestion"></span> <br>
-    Type Password Again: <input type="password"><br>
-    <input type="submit" value="Sign up!">
-    <span id="err-msg"></span>
-</fieldset>
+<body>
+    <h1> Sign Up Form </h1>
 
-<script src="js/index-script.js" defer></script>
+    <fieldset>
+        <legend>Sign Up</legend>
+        First Name: <input type="text"><br>
+        Last Name: <input type="text"><br>
+        Email: <input type="text"><br>
+        Phone Number:<input type="text"><br><br>
+        Zip Code: <input id="zipCode-input" type="text"><br>
+        City: <span id="city-display"></span>
+        <br>
+        Latitude: <span id="latitude-display"></span>
+        <br>
+        Longitude: <span id="longitude-display"></span>
+        <br><br>
+        State: <select></select><br>
+        Select a County: <select></select><br>
+
+        Desired Username: <input id="username-input" type="text"> <span id="username-valid"></span><br>
+        Password: <input id="password-input" type="password"> <span id="password-suggestion"></span> <br>
+        Type Password Again: <input type="password"><br>
+        <input type="submit" value="Sign up!">
+        <span id="err-msg" ></span>
+    </fieldset>
+
+</body>
+
+</html>
