adding lab4 popups

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -28,11 +28,19 @@
         State: <select></select><br>
         Select a County: <select></select><br>
 
-        Desired Username: <input id="username-input" type="text"> <span id="username-valid"></span><br>
-        Password: <input id="password-input" type="password"> <span id="password-suggestion"></span> <br>
+        <div id="username-div">
+            Desired Username: <input id="username-input" type="text">
+            <span id="username-valid"></span>
+        </div>
+        <br><br>
+        <div id="password-div">
+            Password: <input id="password-input" type="password">
+            <span id="password-suggestion"></span>
+        </div>  
+        <br> <br>
         Type Password Again: <input type="password"><br>
         <input type="submit" value="Sign up!">
-        <span id="err-msg" ></span>
+        <span id="err-msg"></span>
     </fieldset>
 
 </body>
